--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -1,41 +1,60 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# -------------------------------
+# Node.js / Next.js
+# -------------------------------
+node_modules/
+.npm/
+.npm-cache/
+.next/
+out/
+dist/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# -------------------------------
+# Environment Files
+# -------------------------------
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# -------------------------------
+# Logs
+# -------------------------------
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# -------------------------------
+# Build & Cache
+# -------------------------------
+.cache/
+coverage/
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# vercel
-.vercel
+# -------------------------------
+# OS Specific
+# -------------------------------
+.DS_Store
+Thumbs.db
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# -------------------------------
+# Frontend Specific
+# -------------------------------
+Frontend/node_modules/
+Frontend/.next/
+Frontend/out/
+Frontend/dist/
+Frontend/.env
+
+# -------------------------------
+# Miscellaneous
+# -------------------------------
+*.pid
+*.seed
+*.tgz
